<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_zeroValue">0</string>
    <string name="btn_oneValue">1</string>
    <string name="btn_twoValue">2</string>
    <string name="btn_threeValue">3</string>
    <string name="btn_nineValue">9</string>
    <string name="btn_fourValue">4</string>
    <string name="btn_fiveValue">5</string>
    <string name="btn_sixValue">6</string>
    <string name="btn_eightValue">8</string>
    <string name="btn_sevenValue">7</string>
    <string name="btn_plusValue">+</string>
    <string name="btn_minusValue">-</string>
    <string name="btn_mulValue">*</string>
    <string name="btn_divValue">/</string>
    <string name="btn_equalValue">=</string>
    <string name="btn_invsignValue">!</string>
    <string name="btn_pointValue">.</string>
    <string name="btn_clearValue">C</string>
    <string name="btn_delValue">D</string>
    <string name="btn_sevenTag">SEVEN</string>
    <string name="i_showHistory">History</string>
    <string name="i_memorySave">M+</string>
    <string name="i_memoryRecall">M</string>
    <string name="i_memoryClear">MC</string>
    <string name="i_about">About</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_history_calculator">History</string>
    <string name="i_clearHistory">Clear</string>
    <string name="i_backToMain">Back</string>
    <string name="title_activity_about_calculator">About</string>
    <string name="tv_aboutText">This is a simple calculator.\n\n
        Usage: operand1(digits) operator(=-*/) operand2 = result\n\n
        Known issues:\n
        1. When entering new operator after operand2, operand1 and it\'s following operator are
        discarded. Meaning that only 2 last operands and operator are calculated.\n\n
        Version 0.4\n\n
        Created by Pablo\n\n
        Contact info:\n pcusnir@gmail.com\n\n</string>
    <string name="btn_aboutDismiss">Dismiss</string>

</resources>
